chore: adapt default JVM options depending on Java version
Motivation:

Depending on the Java version, some options might be enabled or disabled by default, or deprecated and issue warnings when used.

Modification:

Select JVM options depending on the Java major version, like it's being done in the bundle launcher.

Result:

More simple JVM effective configuration, no more warning due to UseBiasedLocking being deprecated since Java 15.